<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="version_name">1.1.63_20160628_1330_Release</string>
	<string name="setting_about35Mail_current_version">Current Version:</string>
    <string name="app_name">&#160;MailChat</string>
    <string name="beta_app_name">&#160;MailChat BETA</string>
    <string name="shortcuts_title">MailChat Accounts</string>
    <string name="unread_widget_label">MailChat Unread</string>
    <string name="remote_control_label">MailChat Mail remote control</string>
    <string name="remote_control_desc">Allows this application to control MailChat Mail activities and settings.</string>
    <string name="app_authors">35 TECHNOLOGY CO., LTD</string>
    <string name="app_copyright_fmt">Copyright © 2013-<xliff:g>%s</xliff:g> 35 TECHNOLOGY CO., LTD – All Rights Reserved</string>
    <string name="app_license">35 TECHNOLOGY CO., LTD – All Rights Reserved</string>
    <string name="welcome_message_title">Welcome to MailChat Mail</string>
    <string name="accounts_welcome">MailChat is an ideal App that combines instant message with E-mail communication. Group talk ,private message are coming soon.</string>
    <string name="default_signature">&#8212;&#8212;&#160;send via MailChat.</string>
    <string name="default_signature_html">&#8212;&#8212;&#160;send via &lt;a href=&quot;http://mailchat.cn&quot;&gt;MailChat&lt;/a&gt;.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from MailChat Mail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed,but account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed,but account settings will be retained.</string>
    <string name="insufficient_apg_permissions">MailChat doesn\'t have permission to access APG fully, please reinstall MailChat to fix that.</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Update Log: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">Open Email attachments</string>
    <string name="read_attachment_desc">Allows this application to open your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="folders_title">Folders</string>
    <string name="advanced">Advanced</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g></string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="status_loading_account_folder">Receiving <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_loading_account_folder_headers">Fetching headers <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_sending_account">Sending <xliff:g id="account">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="status_processing_account">Loading <xliff:g id="account">%s</xliff:g>:<xliff:g id="command">%s</xliff:g><xliff:g id="progress">%s</xliff:g></string>
    <string name="folder_progress">\u0020<xliff:g id="completed">%s</xliff:g>/<xliff:g id="total">%s</xliff:g></string>
    <string name="status_next_poll">Receive next time <xliff:g id="nexttime">%s</xliff:g></string>
    <string name="status_syncing_off">Sync disabled</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Report Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">re-Archive</string>
    <string name="continue_action">Continue</string>
    <string name="back_action">Back</string>
    <string name="done_action">Done</string>
    <string name="discard_action">ignore</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check new mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">search folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Delete account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="send_alternate_chooser_title">Choose sender</string>
    <string name="flag_action">Add star</string>
    <string name="unflag_action">Remove star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="show_headers_action">Show headers</string>
    <string name="hide_headers_action">Hide headers</string>
    <string name="message_view_theme_action_dark">Switch to dark theme</string>
    <string name="message_view_theme_action_light">Switch to light theme</string>
    <string name="mark_as_unread_action">Mark unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="read_receipt">Read receipt</string>
    <string name="read_receipt_enabled">Will request read receipt</string>
    <string name="read_receipt_disabled">Will not request read receipt</string>
    <string name="add_attachment_action">Attach files</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="clear_local_folder_action">Clear local Emails</string>
    <string name="about_action">About</string>
    <string name="prefs_title">Settings</string>
    <string name="accounts_context_menu_title">Account management</string>
    <string name="general_no_subject">(No subject)</string>
    <string name="general_no_sender">No sender</string>
    <string name="status_loading">Polling</string>
    <string name="status_loading_more">Loading messages\u2026</string>
    <string name="status_network_error">Connection error</string>
    <string name="status_invalid_id_error">Message not found</string>
    <string name="status_loading_more_failed">Retry loading more messages</string>
    <string name="load_more_messages_fmt">Pull to load more mail</string>
    <string name="load_more_remote_search_result">Load more remote search result</string>
    <string name="search_hint_text">Search %s folder</string>
    <string name="abbrev_gigabytes">GB</string>
    <string name="abbrev_megabytes">MB</string>
    <string name="abbrev_kilobytes">KB</string>
    <string name="abbrev_bytes">B</string>
    <string name="account_size_changed">Account \"<xliff:g id="account">%s</xliff:g>\" shrunk from <xliff:g id="oldSize">%s</xliff:g> to <xliff:g id="newSize">%s</xliff:g></string>
    <string name="compacting_account">Compacting account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="clearing_account">Clearing account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="recreating_account">Recreating account \"<xliff:g id="account">%s</xliff:g>\"</string>
    <string name="notification_new_title">New mail</string>
    <string name="notification_new_messages_title"><xliff:g id="new_message_count">%d</xliff:g> new E-mails</string>
    <string name="notification_new_one_account_fmt">You have <xliff:g id="unread_message_count">%d</xliff:g> Unread E-mails(<xliff:g id="account">%s</xliff:g>)</string>
    <string name="notification_additional_messages">+ <xliff:g id="additional_messages">%d</xliff:g> more on <xliff:g id="account">%s</xliff:g></string>
    <string name="message_list_reload_button">Retry</string>
    <string name="from_same_sender">More message from this sender</string>
    <string name="account_setup_incoming_client_certificate_label">Client certificate</string>
    <string name="account_setup_outgoing_smtp_server_label">SMTP server</string>
    <string name="account_setup_outgoing_port_label">Port</string>
    <string name="account_setup_outgoing_security_label">Security</string>
    <string name="account_setup_outgoing_require_login_label">Require sign-in.</string>
    <string name="account_setup_outgoing_username_label">Username</string>
    <string name="account_setup_outgoing_password_label">Password</string>
    <string name="account_setup_outgoing_authentication_label">Authentication</string>
    <string name="batch_select_all">Select all</string>
    <string name="create_chatting_title">Initiate Chat</string>
    <string name="more_action">More</string>
    <string name="send_mail_action">Send mail</string>
    <string name="send_dchat_invitation_message">An invitation</string>
	<string name="menu_add_contact">Add contact</string>
    <string name="remain_transaction">To-dos</string>
    <string name="launched">Initiated</string>
    <string name="done_it">Processed</string>
    <string name="recommend_friends_tip">Scan the QR Code to download Andorid/IOS MailChat</string>
    <string name="create_chatting_oa_title">Initiate Chat\\OA</string>
    <string name="invitation_code">Your invitation code:</string>
    <string name="get_invitation_code_failed">Invitation code generation failed</string>
    <string name="tips_invitation_code">You get bonus points if your invitation code is used</string>
    <string name="invitation_code_strategy">Invitation rules</string>
    <string name="webview_home">Home</string>
</resources>