<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mailchat="http://schemas.android.com/apk/res-auto"   >
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionDelete"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionMarkAsRead"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/mark_as_unread"
        android:title="@string/mark_as_unread_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionMarkAsUnread"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionArchive"
        mailchat:showAsAction="always"
         android:visible="false"
    />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionMove"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
        android:icon="?attr/iconActionCopy"
         android:showAsAction="never"
        mailchat:showAsAction="always"
        android:visible="false"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionFlag"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/unflag"
        android:title="@string/unflag_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionUnflag"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        android:showAsAction="never"
        android:icon="?attr/iconActionSpam"
        mailchat:showAsAction="always"
    />
    <item
        android:id="@+id/select_all"
        android:icon="?attr/iconActionSelectAll"
        android:showAsAction="never"
        android:title="@string/batch_select_all"
        mailchat:showAsAction="always"
    />
</menu>
