<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mailchat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_search_mail"
        android:icon="@drawable/icon_actionbar_search"
        android:showAsAction="always"
        android:title="@string/search_action"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_search_msg"
        android:icon="@drawable/icon_actionbar_search"
        android:showAsAction="always"
        android:title="@string/search_action"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_search_contact"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/icon_actionbar_search"
        android:showAsAction="always"
        android:title="@string/search_action"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_send_mail"
        android:icon="@drawable/icon_action_bar_send_mail"
        android:showAsAction="always"
        android:title="@string/send_mail_action"
        android:visible="true"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_send_msg"
        android:icon="@drawable/icon_tab_send_message"
        android:showAsAction="always"
        android:title="@string/create_chatting_title"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_add_contacts"
        android:icon="@drawable/icon_tab_create_chating"
        android:showAsAction="always"
        android:title="@string/menu_add_contact"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_create_chating"
        android:icon="@drawable/icon_tab_create_chating"
        android:showAsAction="always"
        android:title="@string/more_action"
        android:visible="false"
        mailchat:showAsAction="always"/>
    <item
        android:id="@+id/action_send_msg_choice"
        android:icon="@drawable/icon_tab_send_message_choice"
        android:showAsAction="always"
        android:title="@string/create_chatting_oa_title"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_webview_home"
        android:icon="@drawable/icon_tab_webview_home"
        android:showAsAction="always"
        android:title="@string/webview_home"
        android:visible="false"
        mailchat:showAsAction="always"
        tools:ignore="AppCompatResource"/>

</menu>