<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_icode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/invitation_code"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="23dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_invation_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#2ea8e6"
                    android:textIsSelectable="true"
                    android:textSize="33sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layout_load_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/tv_load_failed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_invitation_code_failed"
                        android:textSize="13.3sp" />

                    <TextView
                        android:id="@+id/tv_reload"
                        android:layout_width="39.3dp"
                        android:layout_height="26.7dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/rightcorner_bg_n"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:padding="0dip"
                        android:text="@string/message_list_reload_button"
                        android:textColor="@color/white"
                        android:textSize="13.3sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tips_invitation_code"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/invitation_code_strategy"
                    android:textColor="@color/bluebg"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/ic_mailchat_qr"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/recommend_friends_tip" />

        <Button
            android:id="@+id/btn_invite_contacts_to_use"
            style="@style/style_button_green"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@color/bluebg"
            android:gravity="center"
            android:text="@string/send_dchat_invitation_message" />
    </LinearLayout>

</ScrollView>