<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/custom_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:padding="6dip"
        android:scrollbarStyle="outsideInset" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_outgoing_smtp_server_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_server"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_outgoing_smtp_server_label"
                android:inputType="textUri"
                android:singleLine="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_outgoing_security_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <Spinner
                android:id="@+id/account_security_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_outgoing_security_label" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_outgoing_port_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/account_port"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/account_setup_outgoing_port_label"
                android:inputType="number"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/account_require_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_setup_outgoing_require_login_label" />

            <LinearLayout
                android:id="@+id/account_require_login_settings"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_outgoing_username_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/account_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_outgoing_username_label"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_outgoing_authentication_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <Spinner
                    android:id="@+id/account_auth_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_outgoing_authentication_label" />

                <TextView
                    android:id="@+id/account_password_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_outgoing_password_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary" />

                <EditText
                    android:id="@+id/account_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account_setup_outgoing_password_label"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/account_client_certificate_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_setup_incoming_client_certificate_label"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorPrimary"
                    android:visibility="gone" />

                <cn.mailchat.view.ClientCertificateSpinner
                    android:id="@+id/account_client_certificate_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/wizard_next" />

</LinearLayout>