<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="41.0dip"
	android:background="#f5f5f5"
	android:orientation="horizontal" >
	<ImageView
	    android:id="@+id/img_oa_home"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="13.5dp"
	    android:layout_marginRight="13.5dp"
	    android:layout_gravity="center_vertical"
	    android:background="@drawable/icon_chat_home"/>
	<View
	    android:layout_width="0.5dip"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="10dp"
	    android:layout_marginTop="8dp"
	    android:background="@color/gray" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="41.0dip"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/tv_oa_remain"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/remain_transaction" />

	    <View
	        android:layout_width="0.5dip"
	        android:layout_height="match_parent"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="8dp"
	        android:background="@color/gray" />

	    <TextView
	        android:id="@+id/tv_oa_initiated"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/launched" />

	    <View
	        android:layout_width="0.5dip"
	        android:layout_height="match_parent"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="8dp"
	        android:background="@color/gray" />

	    <TextView
	        android:id="@+id/tv_oa_processed"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/done_it" />

	</LinearLayout>
</LinearLayout>